--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -24,12 +24,13 @@
             </div>
             <div class="row">
                 <div class="small-12 columns group_header">
-                    <div class="group_title left">{{group_object.name}}</div>
+                    <div class="group_title left">{% firstof group_object.altnames group_object.name  %}</div>
                     <div class="right course_actions">
                         <span data-dropdown="course-settings-drop" aria-controls="course-settings-drop" aria-expanded="false" class="tiny radius right">
                             <i class="fi-widget"></i>
                         </span>
                         <ul id="course-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
+                        <li>
                                 <a data-reveal-id="manage_users_modal" href="{% url 'manage_users' group_id %}">Manage Members</a> 
                                 <div id="manage_users_modal" class="reveal-modal large" data-reveal style="position:absolute;"> 
                                     <div id="group_drawer">
@@ -37,6 +38,11 @@
                                     </div>
                                     <a class="close-reveal-modal">&#215;</a>
                                 </div>          
+                        </li>
+                        <li>
+                            <a href="{% url 'create_event_group' group_id 'CourseEventGroup' %}?cnode_id={{group_id}}" class="fi-volume"> Announce</a>
+                        </li>
+
                         </ul>
 
                     </div>
