--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -1,6 +1,6 @@
 
-
 <div class="row">
+
             {% if asset_obj.name %}
 
             {% else %}
@@ -9,7 +9,7 @@
             {% endif %}
             <div class="small-12 colums" >
             {% if asset_obj.name %}
-                <h3 class="left">&nbsp; <i>Asset:</i>&nbsp;{{asset_obj.name}}</h3>
+                <h3 class="left">&nbsp;&nbsp;{{asset_obj.name}}</h3>
 
             {% else %}
                 <h3 class="left">&nbsp; Add a new asset</h3>
