--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -57,7 +57,7 @@
             </ul>
             <ul class="right hide-for-medium-up dropdown-menu hide">
                 <li class=""><a href="#">new My Desk</a></li>
-                <li class=""><a  title="" class="{%if title == 'Explore'%}active{%endif%}" href="{% url explore_url %}" > new Explore Groups</a></li>
+                <li class=""><a  title="" class="{%if title == 'Explore'%}active{%endif%}" href="{% url explore_url %}" > new Explore Projects</a></li>
                 <li class=""><a href="#"> new Blog</a></li>
                 <li class=""><a href="#"><i class="fi-info"></i>&nbsp; new Help Topics</a></li>
                 <!--li class="has-dropdown not-click">
@@ -123,7 +123,7 @@
             <!-- Left Nav Section -->
             <ul class="left show-for-large-up">
                 <li class=""><a href="#">My Desk</a></li>
-                <li><a  class="{%if title == 'Explore'%}active{%endif%}" href="{% url explore_url %}">Explore Groups</a></li>
+                <li><a  class="{%if title == 'Explore'%}active{%endif%}" href="{% url explore_url %}">Explore Projects</a></li>
             </ul>
           </section>
     </nav>
