--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
@@ -178,10 +178,13 @@
 
     $(document).on('click',".edit_res_unit",function(){
         $.ajax({
-          url: "{% url 'inline_edit_res' group_id node.pk %}",
+          url: "{% url 'inline_edit_res' group_id %}",
 
           type: "GET",
 
+          data: {
+            node_id: {{node.pk}}
+          },
           dataType: "html",
 
           success: function(data){
@@ -199,10 +202,11 @@
         // console.log(content_val)
         // console.log("calling ajax")
         $.ajax({
-          url: "{% url 'inline_edit_res' group_id node.pk %}",
+          url: "{% url 'inline_edit_res' group_id %}",
 
           data: {
             content_val: content_val,
+            node_id: {{node.pk}},
             'csrfmiddlewaretoken': "{{csrf_token}}"
           },
 
