clean form data

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -60,6 +60,10 @@
         $("#addActivityPage").removeClass("hide")
         $("#page_listing").addClass("hide")
         $(".activity-sheet-actions").addClass("hide")
+        $(".form_node_id").attr('value', '')
+        $(".node_name").attr('value', '')
+        $(".ckeditor_textarea").attr('value', '')
+
     });
 
     $( ".cancel-page-create" ).click(function() {
