empty ckeditor value for create new acrtivity-page

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -62,8 +62,7 @@
         $(".activity-sheet-actions").addClass("hide")
         $(".form_node_id").attr('value', '')
         $(".node_name").attr('value', '')
-        $(".ckeditor_textarea").attr('value', '')
-
+        CKEDITOR.instances['ckeditor_textarea'].setData('');
     });
 
     $( ".cancel-page-create" ).click(function() {
