Apply stylings to page-detail view

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -28,7 +28,7 @@
         </div>
     </form>
 </div>
-<div class="page-view reveal-modal medium" data-reveal aria-hidden="true" role="dialog">
+<div class="page-view reveal-modal medium" id="scstyle" data-reveal aria-hidden="true" role="dialog">
     <div class="page-content"></div>
     <a class="right edit-page">Edit</a>
     <a class="close-reveal-modal" >&#215;</a>
