--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
@@ -1,6 +1,28 @@
 {% load i18n %}
 {% load ndf_tags %}
 
+	{% get_relation_value video_obj.pk 'has_subtitle' as subtitle_rel %}
+	  {% get_relation_node video_obj.pk  as subtitle_rel_node %}
+	{% comment %}
+	{% for each in subtitle_rel.grel_node  %}
+	  	{{subtitle_rel_node.relation_type_scope.alt_language}}
+  	{% endfor %}
+	{% if subtitle_rel.grel_id %}
+		{% get_relation_node subtitle_rel.grel_id.0  as subtitle_rel_node %}
+		{{subtitle_rel_node.relation_type_scope.alt_language}}
+	{% endif %}
+
+	{% for each in subtitle_rel.grel_node %}
+
+			<track kind="captions" label="en" src="{{MEDIA_URL}}{{each.if_file.original.relurl}}" srclang="en" /> 
+			 
+		 {% endfor  %}
+		
+		 {% for each in subtitle_rel.grel_id  %}
+	  		{% get_relation_node each  as subtitle_rel_node %}
+	  			{{subtitle_rel_node.relation_type_scope.alt_language}}
+		{% endfor %}
+	{% endcomment %}
 
 <div id="scstyle">
 
@@ -9,15 +31,12 @@
 
 		<div class="vidbak">
 		<video id="{{video_obj.pk}}" class="video-js vjs-skin-colors-clix vjs-big-play-button center" controls="controls" data-setup="{ playbackRates: [0.5, 1, 1.5, 2] }" height="360" width="480">
-		<!-- different extension source files to be added -->
-		<!--<source src="{{MEDIA_URL}}{{video_obj.if_file.mid.relurl}}" crossorigin="anonymous" preload="metadata"  type="video/webmp; codecs=&quot;avc1.42E01E, mp4a.40.2 &quot;" /> 
-		<source src="{{MEDIA_URL}}{{video_obj.if_file.original.relurl}}" type="video/ogg; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" crossorigin="anonymous" preload="metadata"  /> 
-		<source src="{{MEDIA_URL}}{{video_obj.if_file.original.relurl}}" crossorigin="anonymous" preload="metadata" type="video/mp4 codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" /> -->
 		<source src="{{MEDIA_URL}}{{video_obj.if_file.original.relurl}}" type="video/mp4" crossorigin="anonymous" preload="metadata" codecs="avc1.42E01E, mp4a.40.2"/>
+		 
+
+
 		<!-- adding captions in different language-->
-		<track kind="captions" label="English" src="/media/c/d/e/126b4a223e3af7b0da7b8f04f673e02b10b2547982eea739923fa2e15d7d9" srclang="en" /> 
-		<track kind="captions" label="Telegu" src="" srclang="te" /> 
-		<track kind="captions" label="Hindi" src="" srclang="hi" />
+		
 		</video>
 		</div>
 			{% get_relation_value video_obj.pk 'has_transcript' as transcript_rel %}
@@ -25,9 +44,9 @@
 
 		<form class="trans-form"><input align="right" id="toggler" type="checkbox" /><label class="toggle-me" for="toggler">Transcript</label><img alt="" class="arrow-toggle" src="../Images/chevron-right.svg" />
 		<div class="transcript">
-			<iframe id="html-res-iframe" width="100%" seamless="seamless" src="{{MEDIA_URL}}{{transcript_rel.grel_node.if_file.original.relurl}}">
+			<object type="text/html" data="{{MEDIA_URL}}{{transcript_rel.grel_node.if_file.original.relurl}}" style="width:100%; height:100%">
+			</object>
 		</div>
-		</form>
 			{% endif %}
 	</div>
 	{% endif %}
