--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -213,7 +213,7 @@
     <!-- Handlebar Templates for the course tree -->
     <script id="lesson-template" type="text/x-handlebars-template">
         <dd class="accordion-navigation">
-            <a href="#lesson-{{id}}" class="entity-title">
+            <a href="#lesson-{{id}}" class="entity-title" id="lesson-accordion">
                 {{name}}
                 <div class="right edit_entity">
                     <i class="fi-list right"></i>
@@ -402,27 +402,79 @@
 
         // Move a lesson down
         $('.course-lessons').on('click', '.lesson_move_down' ,function(e){
-            e.stopPropagation();
-            e.preventDefault();
-
-            var lesson_id = $(this).closest('a').attr('href').replace('#lesson-', '');
+            var $current = $(this).closest('a#lesson-accordion')
+            var $next = $current.parent('dd').next('dd')
+            var parent_node = "{{group_id}}"; // unit_node in this case
+            var curr_lesson_id = $current.attr('href').replace('#lesson-', '');
+            var next_lesson_id = $next.find('a#lesson-accordion').attr('href').replace('#lesson-', '');
 
             //Ajax to move the lesson up.
-            console.log('Ajax call to move an activity. ' + lesson_id);
+            $.ajax({
+                url: "{% url 'change_order' group_id %}",
+
+                data: {
+                    node_id_up: next_lesson_id,
+                    node_id_down: curr_lesson_id,
+                    parent_node: parent_node,
+                    'csrfmiddlewaretoken': "{{csrf_token}}"
+                },
+
+                type: "POST",
+
+                dataType: "json",
+
+                success: function(data){
+                    success_state = data["success"]
+                    if(success_state){
+                        $current.parent('dd').insertAfter($next);
+                    }
+                },
+            });//end of ajax
+
+
+            // var lesson_id = $(this).closest('a').attr('href').replace('#lesson-', '');
+
+            //Ajax to move the lesson up.
+            // console.log('Ajax call to move an activity. ' + lesson_id);
             //Update the course_data after successful movedown and call rerender.
 
         });
 
         // Move a lesson up
         $('.course-lessons').on('click', '.lesson_move_up' ,function(e){
-            e.stopPropagation();
-            e.preventDefault();
-
-            var lesson_id = $(this).closest('a').attr('href').replace('#lesson-', '');
+            var $current = $(this).closest('a#lesson-accordion')
+            var $previous = $current.parent('dd').prev('dd')
+            var parent_node = "{{group_id}}"; // unit_node in this case
+            var curr_lesson_id = $current.attr('href').replace('#lesson-', '');
+            var prev_lesson_id = $previous.find('a#lesson-accordion').attr('href').replace('#lesson-', '');
 
             //Ajax to move the lesson up.
-            console.log('Ajax call to move an activity. ' + lesson_id);
+            $.ajax({
+                url: "{% url 'change_order' group_id %}",
+
+                data: {
+                    node_id_up: curr_lesson_id,
+                    node_id_down: prev_lesson_id,
+                    parent_node: parent_node,
+                    'csrfmiddlewaretoken': "{{csrf_token}}"
+                },
+
+                type: "POST",
+
+                dataType: "json",
+
+                success: function(data){
+                    success_state = data["success"]
+                    if(success_state){
+                        $current.parent('dd').insertBefore($previous);
+                    }
+                },
+            });//end of ajax
+
+            // console.log('Ajax call to move an activity. ' + lesson_id);
             //Update the course_data after successful moveup and call rerender.
+            // e.stopPropagation();
+            // e.preventDefault();
 
         });
 
