complete UI change + overlay screens

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
@@ -11,7 +11,7 @@
   font-size: 1em;
 }
 
-#scstyle h1, h2, h3, h4,  h5,  h6 {
+#scstyle h1, h2, h4,  h6 {
   font-family: 'Rubik-Light', sans-serif;
   font-weight: normal;
   color: #4a4a4a !important; 
