--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
@@ -15,14 +15,14 @@
                 </div>
                 <hr/>
 
-                <div class="course_creator_header">
+                <!--<div class="course_creator_header">
                     <div class="left course_heading">
                     <h4>Unit display Name:</h4>
                     </div>
                     <div class="right course_heading">
                         <input id="unit-altnames" name="altnames" type="text" placeholder="Enter unit display name"/>
                     </div>
-                </div>
+                </div>-->
                 <div class="right course_actions">
                     
                         <!--<button asset-save-button type="button" class ="right orange-button save-asset" id="" value="Save"/>-->
