--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -26,7 +26,7 @@
                 <div class="small-12 columns group_header">
                     <div class="group_title left">{{group_object.name}}</div>
                     <div class="right course_actions">
-                      <i class="fi-widget"></i>
+                      <i class="icon-widget fi-widget"></i>
                     </div>
 
                 </div>
@@ -97,7 +97,7 @@
                             {% include "ndf/add_asset.html" %}
                         {% endif %}
                     </div>
-                    <div id="addAsset" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+                    <div id="addAsset" class="reveal-modal reveal-modal-overlay" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                         <a class="close-reveal-modal" aria-label="Close">&#215;</a>
                     </div>
                     <div id="group_forum">
